--- a/rtic-monotonics/Cargo.toml
+++ b/rtic-monotonics/Cargo.toml
@@ -32,7 +32,7 @@ rtic-time = { version = "1.1.0", path = "../rtic-time" }
 embedded-hal = { version = "1.0" }
 embedded-hal-async = { version = "1.0", optional = true }
 fugit = { version = "0.3.6" }
-atomic-polyfill = "1"
+portable-atomic = "1.6.0"
 cfg-if = "1.0.0"
 cortex-m = { version = "0.7.6", optional = true }
 critical-section = { version = "1", optional = true }
